tests/neg/i14062.scala
import annotation.*

object Test:

  @targetName("") // error
  def foo = println("ok")

  foo


